--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -16,9 +16,9 @@
   color: #fff!important;
 }
 .btn-light:hover {
-   color: #fff!important;
-   background-color: #004384;
- }
+  color: #fff!important;
+  background-color: #004384;
+}
 .search-remove {
   position: absolute;
   top: 50%;
@@ -45,7 +45,7 @@
 
 .search-results {
   position: absolute;
-  height: 200px;
+  height: 300px;
   z-index: 12;
   top: 100%;
   left: 0;
@@ -116,16 +116,16 @@
 }
 
 .header {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   background-color: #0056a8;
-   height: 100px;
-   text-align: center;
-   padding-top: 20px;
-   z-index: 2; /* make sure the header is on top */
- }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #0056a8;
+  height: 100px;
+  text-align: center;
+  padding-top: 20px;
+  z-index: 2; /* make sure the header is on top */
+}
 
 .navbar {
   position: fixed;
@@ -168,3 +168,106 @@ header:hover nav {
 /*header:hover nav {*/
 /*  top: 0; !* show the navbar when the header is hovered over *!*/
 /*}*/
+
+/*modal*/
+h3{
+  font-size: 16px;
+}
+.modal.left .modal-dialog,
+.modal.right .modal-dialog {
+  position: fixed;
+  margin: auto;
+  width: 700px;
+  height: 100%;
+  -webkit-transform: translate3d(0%, 0, 0);
+  -ms-transform: translate3d(0%, 0, 0);
+  -o-transform: translate3d(0%, 0, 0);
+  transform: translate3d(0%, 0, 0);
+}
+
+.modal.left .modal-content,
+.modal.right .modal-content {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.modal.left .modal-body,
+.modal.right .modal-body {
+  padding: 15px 15px 80px;
+}
+
+/*Left*/
+.modal.left.fade .modal-dialog{
+  left: -10px;
+  -webkit-transition: opacity 0.3s linear, left 0.3s ease-out;
+  -moz-transition: opacity 0.3s linear, left 0.3s ease-out;
+  -o-transition: opacity 0.3s linear, left 0.3s ease-out;
+  transition: opacity 0.3s linear, left 0.3s ease-out;
+}
+
+.modal.left.fade.in .modal-dialog{
+  left: 0;
+}
+
+/* ----- MODAL STYLE ----- */
+.modal-content {
+  border-radius: 0;
+  border: none;
+}
+
+.modal-header {
+  border-bottom-color: #EEEEEE;
+  background-color: #FAFAFA;
+}
+.modal.left .modal-body ul.list-unstyled {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.modal.left .modal-body ul.list-unstyled li {
+  margin: 0;
+  padding: 0;
+}
+
+.modal.left .modal-body ul.list-unstyled li:last-child {
+  border-bottom: none;
+}
+
+.modal.left .modal-body ul.list-unstyled li a {
+  display: block;
+  padding: 10px 20px;
+  font-weight: 500;
+  color: #333;
+  text-decoration: none;
+}
+
+.modal.left .modal-body ul.list-unstyled li a:hover {
+  color: #666;
+  background-color: #f5f5f5;
+}
+
+.modal.left .modal-body ul.list-unstyled li a .pull-right {
+  font-size: 10px;
+  font-weight: normal;
+  margin-left: 10px;
+}
+li {
+  display: flex;
+  align-items: center;
+  border-color: transparent;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+li:hover {
+  color: #666;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.category-item {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
